module-loader/test-need-large-module.txt
undefined:1
((module, need) => {const need = require('./need')
                          ^

SyntaxError: Identifier 'need' has already been declared
    at loadModule (/Users/gvwilson/stjs/module-loader/load-module.js:8:8)
    at need (/Users/gvwilson/stjs/module-loader/need.js:9:22)
    at Object.<anonymous> (/Users/gvwilson/stjs/module-loader/test-need-large-module.js:3:15)
    at Module._compile (internal/modules/cjs/loader.js:1151:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1171:10)
    at Module.load (internal/modules/cjs/loader.js:1000:32)
    at Function.Module._load (internal/modules/cjs/loader.js:899:14)
    at Function.executeUserEntryPoint [as runMain] (internal/modules/run_main.js:71:12)
    at internal/main/run_main_module.js:17:47
